--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "validator": "^13.11.0"
   }
 }
